互联网/技术/容器技术/kubernetes(k8s)/resources/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: images-deployment
  namespace: images-syf
  labels:
    app: images
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: images
    spec:
      containers:
        - name: images
          image: images:1.13.5-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
