互联网/技术/容器技术/kubernetes(k8s)/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: images-syf
  name: images-service
spec:
  selector:
    app: images
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
