互联网/技术/容器技术/kubernetes(k8s)/resources/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: images-ingress
  namespace: images-syf
spec:
  rules:
    - host: images.syf.local #此域名需解析到k8s集群负载主机IP
      http:
        paths:
          - backend:
              serviceName: images-service
              servicePort: 80
            path: /
